[gd_scene load_steps=12 format=3 uid="uid://civ242y3r6l2a"]

[ext_resource type="Theme" uid="uid://dsnux54sug7ir" path="res://scenes/player_setup.tres" id="1_dho6o"]
[ext_resource type="Script" path="res://scripts/player_setup.gd" id="2_4fjiw"]
[ext_resource type="FontFile" uid="uid://j8s2a2y7lay" path="res://assets/fonts/Flat Earth Scribe.ttf" id="3_wyjn6"]
[ext_resource type="Texture2D" uid="uid://cmaqge41y7fdx" path="res://assets/images/elements/air.png" id="4_gu3or"]
[ext_resource type="Texture2D" uid="uid://c5ej0d8p7s7bg" path="res://assets/images/elements/earth.png" id="5_e7cqo"]
[ext_resource type="Texture2D" uid="uid://cfcbkjgd1dtmf" path="res://assets/images/elements/fire.png" id="6_dwvb2"]
[ext_resource type="Texture2D" uid="uid://bwlyoq7o83n43" path="res://assets/images/elements/water.png" id="7_h3h7o"]
[ext_resource type="Theme" uid="uid://d03l0um7shk6w" path="res://menu.tres" id="8_ehujy"]
[ext_resource type="PackedScene" uid="uid://bth6oknld84yg" path="res://scenes/multiplayer_test.tscn" id="9_n8h51"]
[ext_resource type="Script" path="res://scenes/multiplayer_status.gd" id="10_1v47x"]

[sub_resource type="SystemFont" id="SystemFont_ypk85"]
subpixel_positioning = 0

[node name="PlayerSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_dho6o")
script = ExtResource("2_4fjiw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1700.0
offset_bottom = 478.0
scale = Vector2(0.420479, 0.598997)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="P1Vbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P1Vbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wyjn6")
theme_override_font_sizes/font_size = 66
text = "Solmyr
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P1Vbox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
texture = ExtResource("4_gu3or")
expand_mode = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P1Vbox"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ypk85")
theme_override_font_sizes/font_size = 50
text = "A - D - W"
horizontal_alignment = 1

[node name="Select" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P1Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Select"

[node name="P2Vbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P2Vbox"]
layout_mode = 2
text = "Aislinn
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P2Vbox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
texture = ExtResource("5_e7cqo")
expand_mode = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P2Vbox"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ypk85")
theme_override_font_sizes/font_size = 50
text = "Left -Right - Up"
horizontal_alignment = 1

[node name="Select" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P2Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Select"

[node name="P3Vbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P3Vbox"]
layout_mode = 2
text = "Reginald
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P3Vbox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
texture = ExtResource("6_dwvb2")
expand_mode = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P3Vbox"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ypk85")
theme_override_font_sizes/font_size = 50
text = "J - L - I"
horizontal_alignment = 1

[node name="Select" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P3Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Select"

[node name="P4Vbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox"]
layout_mode = 2
text = "Elfduardo
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
texture = ExtResource("7_h3h7o")
expand_mode = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ypk85")
theme_override_font_sizes/font_size = 50
text = "4 - 6 - 8"
horizontal_alignment = 1

[node name="Select" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Select"

[node name="ColorPicker" type="ColorPicker" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox"]
visible = false
layout_mode = 2

[node name="GO" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_ehujy")
theme_override_font_sizes/font_size = 66
text = "GO"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_ehujy")
theme_override_font_sizes/font_size = 66
text = "Back"

[node name="Multiplayer_Test" parent="PanelContainer" instance=ExtResource("9_n8h51")]
position = Vector2(1814.6, 248.749)
scale = Vector2(2.37824, 1.66946)

[node name="Container" type="Container" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 463.0
offset_right = 208.0
offset_bottom = 503.0

[node name="MutiplayerStatus" type="VBoxContainer" parent="Container"]
layout_mode = 2
script = ExtResource("10_1v47x")

[node name="PlayerConnected" type="Label" parent="Container/MutiplayerStatus"]
layout_mode = 2
text = "Player Connected"

[node name="Hosting" type="Label" parent="Container/MutiplayerStatus"]
layout_mode = 2
text = "Hosting"

[connection signal="go" from="." to="." method="_on_multi_go"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P1Vbox/Select" to="." method="_on_p_1on_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P2Vbox/Select" to="." method="_on_p_2on_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P3Vbox/Select" to="." method="_on_p_3on_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox/Select" to="." method="_on_p_4on_pressed"]
[connection signal="color_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/P4Vbox/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GO" to="." method="_on_go_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="hosted" from="PanelContainer/Multiplayer_Test" to="." method="_on_multiplayer_test_hosted"]
[connection signal="joined" from="PanelContainer/Multiplayer_Test" to="." method="_on_multiplayer_test_joined"]
